syntax = "proto3";
option go_package = "github.com/braintree/heckler/internal/rizzopb";
package rizzopb;

enum Lock_status {
	lock_unknown = 0;
	locked_by_user = 1;
	locked_by_another = 2;
	unlocked = 3;
}

enum Lock_req_type {
	lock = 0;
	unlock = 1;
	state = 2;
}

// The Rizzo service definition.
service Rizzo {
  // applies a ref
  rpc PuppetApply (PuppetApplyRequest) returns (PuppetReport) {}
  rpc PuppetLastApply (PuppetLastApplyRequest) returns (PuppetReport) {}
  rpc PuppetLock (PuppetLockRequest) returns (PuppetLockReport) {}
}

message Event {
  string property = 1;
  string previous_value = 2;
  string desired_value = 3;
  string message = 4;
  string name = 5;
  string status = 6;
  bool corrective_change = 7;
}

message Log {
  string level = 1;
  string message = 2;
  string source = 3;
  string file = 4;
  int64 line = 5;
}

message PuppetReport {
  string host = 1;
  string configuration_version = 2;
  int64 report_format = 3;
  string puppet_version = 4;
  string status = 5;
  bool transaction_completed = 6;
  bool noop = 7;
  bool noop_pending = 8;
  string environment = 9;
  repeated Log logs = 10;
  map<string,ResourceStatus> resource_statuses = 11;
  bool corrective_change = 12;
  string cached_catalog_status = 13;
  string confdir = 14;
  string last_apply_version = 15;
}

message ResourceStatus {
  int64 change_count = 1;
  bool changed = 2;
  repeated string containment_path = 3;
  bool corrective_change = 4;
  bool failed = 5;
  bool failed_to_restart = 6;
  bool out_of_sync = 7;
  int64 out_of_sync_count = 8;
  string provider_used = 9;
  string resource = 10;
  string resource_type = 11;
  bool skipped = 12;
  string title = 13;
  repeated Event events = 14;
  string file = 15;
  int64 line = 16;
}

// The request message containing the git rev identifier, e.g. a tag or a
// commit id
message PuppetApplyRequest {
  string rev = 1;
  bool noop = 2;
}

// Ask for last apply report
message PuppetLastApplyRequest {}

message PuppetLockRequest {
  Lock_req_type type = 1;
  string user = 2;
  string comment = 3;
  bool force = 4;
}

message PuppetLockReport {
  string host = 1;
  Lock_status lock_status = 2;
  string error = 3;
  string user = 4;
  string comment = 5;
}
